test/tests/stages/14_pointers/valid/extra_credit/bitshift_dereferenced_ptrs.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: ui
        CSingleInit: 
          CConstant: 
            CConstLong: 
              TLong: 4294967295
            None: 
          None: 
        UInt: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_ui_ptr
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CAddrOf: 
                  CVar: 
                    TIdentifier: ui
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            UInt: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: shiftcount
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 5
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitShiftLeft: 
                    CDereference: 
                      CFunctionCall: 
                        TIdentifier: get_ui_ptr
                        List[0]: 
                        None: 
                      None: 
                    CConstant: 
                      CConstLong: 
                        TLong: 2
                      None: 
                    None: 
                  CConstant: 
                    CConstLong: 
                      TLong: 4294967292
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitShiftRight: 
                    CDereference: 
                      CFunctionCall: 
                        TIdentifier: get_ui_ptr
                        List[0]: 
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1073741823
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: shiftcount_ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: shiftcount
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitShiftRight: 
                    CConstant: 
                      CConstUInt: 
                        TUInt: 1000000
                      None: 
                    CDereference: 
                      CVar: 
                        TIdentifier: shiftcount_ptr
                        None: 
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 31250
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitShiftLeft: 
                    CConstant: 
                      CConstUInt: 
                        TUInt: 1000000
                      None: 
                    CDereference: 
                      CVar: 
                        TIdentifier: shiftcount_ptr
                        None: 
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 32000000
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
